27_matrix_input/grade.txt
Grading at Wed 15 Nov 2023 05:54:12 AM UTC
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:45:10: error: unused variable ‘g’ [-Werror=unused-variable]
   45 |   FILE * g;
      |          ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
